<?xml version="1.0"?>
<package>
  <name>yhs_chassis_description</name>
  <version>0.0.0</version>
  <description>
    yhs_chassis_description provides a complete 3D model of the TurtleBot for simulation
    and visualization. The files in this package are parsed and used by a variety of
    other components. Most users will not interact directly with this package.
  </description>


  <maintainer email="jackey@todo.todo">jackey</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>



  <export>

  </export>
</package>
